// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallAppItem component should be rendered correctly an app 1`] = `
<div
  className="sto-small-app-item"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <img
      alt="test-icon"
      className="sto-small-app-item-icon"
      height="64"
      src="<svg></svg>"
      width="64"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      Cozy
    </p>
  </div>
</div>
`;

exports[`SmallAppItem component should be rendered correctly an installed app 1`] = `
<div
  className="sto-small-app-item"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <img
      alt="test2-icon"
      className="sto-small-app-item-icon"
      height="64"
      src="<svg></svg>"
      width="64"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</div>
`;

exports[`SmallAppItem component should be rendered correctly an installed app without icon provided 1`] = `
<div
  className="sto-small-app-item"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <Icon
      className="sto-small-app-item-icon sto-small-app-item-icon--default blurry"
      color="#95999D"
      height="64"
      icon="test-file-stub"
      spin={false}
      width="48"
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
    >
      Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</div>
`;
